--- a/css/blocks/about.less
+++ b/css/blocks/about.less
@@ -16,6 +16,7 @@
  }
 
 .about__photo {
+  margin-top: 59px;
   position: relative;
   background: url("../img/symbols2.png");
    
@@ -49,8 +50,16 @@
 
 .about__text {
   margin-bottom: 1rem;
-   font-size: .8rem;
+   font-size: 1rem;
    line-height: 2; 
    color: @grey;
-   font-weight: 300;
+   font-weight: 400;
+}
+
+.aboutme__text {
+  width: 130%;
+  display: flex;
+}
+.about__ul {
+  width: 50%;
 }
