--- a/css/blocks/helpers.less
+++ b/css/blocks/helpers.less
@@ -7,3 +7,16 @@
   max-width: 100%;
   height: auto;
 }
+
+
+.mb-0 {
+  margin-bottom: 0 !important;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.hide {
+  display: none;
+}
