--- a/css/blocks/work.less
+++ b/css/blocks/work.less
@@ -1,10 +1,12 @@
 // main: ../style.less
 
 .work {
+  height: 100%;
   overflow: hidden;
   border-radius: 10px;
   box-shadow: 0 0 4px fade(#000, 25%);
-   transition: box-shadow .2s linear;
+  transition: box-shadow .2s linear;
+  cursor: pointer;
 
   &:hover {
     box-shadow: 0 0 25px fade(#000, 25%); 
@@ -14,8 +16,7 @@
 .work__image {
   display: block;
   max-width: 100%;
-  height: auto;
-}
+  }
 
 .work__content {
   padding: 1rem 0.8rem ;
