--- a/css/style.less
+++ b/css/style.less
@@ -10,6 +10,10 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-size: 1rem;
   color: @black;
+
+  &.no-scroll{
+    overflow: hidden;
+  }
 }
 h1, h2, h3, h4, h5, h6 {
   margin: 0 ;
@@ -40,3 +44,7 @@ p {
 @import "blocks/about";
 @import "blocks/reviews";
 @import "blocks/footer";
+@import "blocks/modal";
+@import "blocks/modal-work";
+@import "blocks/contact";
+@import "blocks/form";
